fixing url template tags to be django 1.5 compliance

--- a/vcweb/core/templates/participant/base.html
+++ b/vcweb/core/templates/participant/base.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load tags %}
 
-{% url home as home %}
-{% url core:dashboard as dashboard %}
-{% url core:login as login %}
-{% url core:logout as logout %}
-{% url core:profile as profile %}
+{% url 'home' as home %}
+{% url 'core:dashboard' as dashboard %}
+{% url 'core:login' as login %}
+{% url 'core:logout' as logout %}
+{% url 'core:profile' as profile %}
 
 {% block title %}
 {{ experiment.display_name }}
