fixing experimenter url template tags

--- a/vcweb/core/templates/experimenter/base.html
+++ b/vcweb/core/templates/experimenter/base.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load tags %}
-{% url home as home %}
-{% url core:dashboard as dashboard %}
-{% url core:login as login %}
-{% url core:logout as logout %}
-{% url core:profile as profile %}
+{% url 'home' as home %}
+{% url 'core:dashboard' as dashboard %}
+{% url 'core:login' as login %}
+{% url 'core:logout' as logout %}
+{% url 'core:profile' as profile %}
 {% block title %}Virtual Commons Web Experimenter Interface{% endblock %}
 
 {% block javascript %}
