adding ids to main content / sidebar divs so their spans can be rearranged

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -88,11 +88,11 @@
 
     {% block page %}
     <div class='row' id='page'>
-        <div class='span9'>
+        <div id='content' class='span9'>
             {% block content %}
             {% endblock %}
         </div>
-        <div class='span3 filler sidebar'>
+        <div id='sidebar' class='span3 filler sidebar'>
             {% block sidebar %}
             {% endblock %}
         </div>
