--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -1,5 +1,9 @@
 {% extends "participant/base.html" %}
-
+{% load static %}
+{% block head %}
+{{ block.super }}
+<link rel='stylesheet' href='{% static "css/boundaries/style.css" %}'/>
+{% endblock %}
 {% block content %}
 <form class='form-inline'>
     <h2>Experimenter Panel</h2>
@@ -58,15 +62,15 @@
 {% block sidebar %}
 <div data-bind='if: chatEnabled'>
 <h3>Chat</h3>
-<div class='chat-sidebar'>
+<div class='chat-sidebar well'>
     <form id="chatform" class='form-inline'>
         <div class='input-prepend input-append'>
             <span class='add-on'><i class='text-info icon-comment'></i></span>
-            <input style='width: 63%;' class='chat-action' id='chatText' type="text" placeholder="Enter a chat message">
+            <input style='width: 100%;' class='chat-action' id='chatText' type="text" placeholder="Enter a chat message">
             <button class='btn' data-bind='click: submitChatMessage'>Send</button>
         </div>
     </form>
-    <div id='chat-div' class='chat-sidebar'>
+    <div id='chat-div'>
         <div data-bind='foreach: chatMessages'>
             <i class='icon-user muted'></i> <strong>Participant <span data-bind='text: participant_number'></strong><b class='pull-right muted' data-bind='text: date_created'></b>
             <p>
@@ -401,7 +405,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
             });
             model.resourceImageHeight = ko.observable("79px");
             model.startChatTimer = function() {
-                model.enableChat(true);
+                model.enableChat();
                 model.secondsLeft(60);
                 model.setCurrentInterval(
                         setInterval(function() {
@@ -450,10 +454,14 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
                 }
             }
             model.disableChat = function() {
+                $('#content').removeClass('span6').addClass('span9');
+                $('#sidebar').removeClass('span6').addClass('span3');
                 $('.chat-action').addClass('disabled').attr('disabled', true);
                 model.chatEnabled(false);
             }
             model.enableChat = function() {
+                $('#content').removeClass('span9').addClass('span6');
+                $('#sidebar').removeClass('span3').addClass('span6');
                 $('.chat-action').removeClass('disabled').attr('disabled', false);
                 model.chatEnabled(true);
             }
