minor modifications to lighterprints css ala fervor recommendations

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -31,7 +31,9 @@
             {% block headerlinks %}
             <ul class='nav'>
                 <li><a class='brand {% active request home %}' href='{{ home}}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='30' height='23' alt='vcweb logo'/>virtual commons</a></li>
+                {% comment FIXME: disabling for the time %}
                 <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='icon-dashboard'></i> Dashboard</a></li>
+                {% endcomment %}
                 <li class='{% active request contact %}'><a href='{{ contact }}'><i class='icon-bell'></i> Contact us</a></li>
                 <li><a target='_blank' href='https://bitbucket.org/virtualcommons/vcweb/issues/new'><i class='icon-bullhorn'></i> Report a Bug</a></li>
                 {% if "participate" in request.path or "wait" in request.path %}
