--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -33,15 +33,16 @@
             <ul class='nav'>
                 <li><a class='brand {% active request home %}' href='{{ home}}'><img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='30' height='23' alt='vcweb logo'/>virtual commons</a></li>
                 {% if request.user.is_authenticated %}
+                {% if request.user.participant %}
                 <li class='{% active_re request participate %}'><a href='{{ participate }}'><i class='icon-group'></i> Participate</a></li>
+                {% elif request.user.experimenter %}
+                <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'><i class='icon-dashboard'></i> Dashboard</a></li>
+                {% endif %}
                 {% endif %}
                 <li class='{% active request contact %}'><a href='{{ contact }}'><i class='icon-bell'></i> Contact us</a></li>
                 <li><a target='_blank' href='https://bitbucket.org/virtualcommons/vcweb/issues/new'><i class='icon-bullhorn'></i> Report a Bug</a></li>
                 {% if "participate" in request.path or "wait" in request.path %}
                 <li class='{% active_re request "participate" %} {% active_re request "wait" %}'><a name='participate'><i class='icon-group'></i>Participate</a></li>
-                {% endif %}
-                {% if "experiment" in request.path %}
-                <li class='{% active_re request "experiment" %}'><a name='experiment'><i class='icon-beaker'></i> Experiment</a></li>
                 {% endif %}
             </ul>
             {% endblock headerlinks %}
