forgot to update test select

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -38,9 +38,9 @@
             <label class='control-label' for='pick-template'>Round template</label>
             <select id='pick-template' data-bind='value: templateName()'>
                 <option value='WELCOME'>Welcome</option>
-                <option value='INSTRUCTIONS'>Instructions</option>
-                <option value='INSTRUCTIONS2'>Instructions page 2</option>
-                <option value='INSTRUCTIONS3'>Instructions page 3</option>
+                <option value='GENERAL_INSTRUCTIONS'>Instructions</option>
+                <option value='GENERAL_INSTRUCTIONS2'>Instructions page 2</option>
+                <option value='GENERAL_INSTRUCTIONS3'>Instructions page 3</option>
                 <option value='PRACTICE_ROUND_INSTRUCTIONS'>Practice Round Instructions</option>
                 <option value='PRACTICE'>Practice round</option>
                 <option value='REGULAR'>Actual round</option>
